--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,6 +17,20 @@
     "<all_urls>",
     "contextMenus"
   ],
+  "commands": {
+    "close-tabs-to-right": {
+      "suggested_key": {
+        "default": "Alt+Shift+U"
+      },
+      "description": "Close tabs to the right"
+    },
+    "toggle-pinned-tab": {
+      "suggested_key": {
+        "default": "Alt+Shift+P"
+      },
+      "description": "Toggle pinned tab"
+    }
+  },
   "background": {
     "scripts": [
       "background.js"
