--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,6 +24,12 @@
       },
       "description": "Close tabs to the right"
     },
+    "duplicate-tab": {
+      "suggested_key": {
+        "default": "Alt+Shift+D"
+      },
+      "description": "Duplicate tab"
+    },
     "toggle-pinned-tab": {
       "suggested_key": {
         "default": "Alt+Shift+P"
