--- a/package.json
+++ b/package.json
@@ -3,17 +3,10 @@
   "scripts": {
     "start": "web-ext run",
     "build": "web-ext build",
-    "eslint": "eslint .",
-    "eslint:fix": "npm run eslint -- --fix",
-    "prettier": "prettier --check \"**/*.{css,html,js,md}\"",
-    "prettier:fix": "prettier --write \"**/*.{css,html,js,md}\"",
-    "test": "npm run eslint && npm run prettier && npm run build"
+    "test": "prettier --check . && npm run build"
   },
   "devDependencies": {
-    "eslint": "6.8.0",
-    "eslint-config-lydell": "14.0.0",
-    "eslint-plugin-prettier": "3.1.2",
-    "prettier": "1.19.1",
-    "web-ext": "4.0.0"
+    "prettier": "2.6.1",
+    "web-ext": "6.8.0"
   }
 }
